Búsqueda de productos
Terminada la funcionalidad de búsqueda de productos desde el navbar

--- a/frontend/src/app/componentes/productos/productos.component.html
+++ b/frontend/src/app/componentes/productos/productos.component.html
@@ -134,7 +134,7 @@
             <div class="container mt-3">
                 <div class="row justify-content-center">
 
-                    <div *ngIf="!filtrados || filtrados.length === 0">
+                    <ng-container *ngIf="(!filtrados || filtrados.length === 0) && !sinCoincidencias">
 
                         <div class="col-lg-4 col-md-6 col-12" *ngFor="let producto of productos | filtroEspecies:filtro_Especie | filtroGenero:filtro_Genero |filtroFamilia:filtro_Familia">
                             <div class="card mb-5 mt-1 mr-3 ml-3 estilo-card">
@@ -167,7 +167,52 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+
+                    </ng-container>
+
+                    <ng-container *ngIf="sinCoincidencias">
+                        <div class="text-danger mt-5">
+                            <h4 class="d-inline">No hay productos que coincidan con el término buscado</h4>
+                        </div>
+                    </ng-container>
+
+
+                    <ng-container *ngIf="filtrados && filtrados.length > 0">
+
+                        <div class="col-lg-4 col-md-6 col-12" *ngFor="let producto of filtrados | filtroEspecies:filtro_Especie | filtroGenero:filtro_Genero |filtroFamilia:filtro_Familia">
+                            <div class="card mb-5 mt-1 mr-3 ml-3 estilo-card">
+
+                                <div class="img-animtion imagenes p-0 ">
+                                    <img src="{{url+'get-image/'+producto.urlportada}}" alt="" class="card-img-top imagenes ">
+
+                                </div>
+
+                                <div class="card-body text-center" id="divPadre">
+
+                                    <h5 class="card-title tuclase">
+                                        {{producto.nombre}}
+                                    </h5>
+
+                                    <p class="card-text mt-2 mb-4 " style="font-size: 1.3em;">
+                                        <span class=" mt-4"> Precio</span> <span class=" mt-4" style="font-size:1.5em; color:rgb(28, 145, 115)">  L </span> <span class=" mt-4" style="font-size:1.5em; color: rgb(3, 121, 66);">{{producto.precio}}</span>
+                                    </p>
+
+                                    <div class=" container">
+                                        <div class="row">
+                                            <div class=" col-8">
+                                                <button type="button" class="btn btn-outline-success boton-compra">Comprar Ahora</button>
+                                            </div>
+                                            <div class=" col-4">
+                                                <i class="fas fa-shopping-cart icono"></i>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                    </ng-container>
+
 
 
 
