--- a/frontend/src/app/componentes/compartidos/carruzel/carruzel.component.html
+++ b/frontend/src/app/componentes/compartidos/carruzel/carruzel.component.html
@@ -1,4 +1,4 @@
-<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+<div id="carouselExampleControls" class="carousel slide animated2 fadeIn" data-ride="carousel">
     <div class="carousel-inner">
         <div class="carousel-item active">
             <img src="assets/img/1C.png" class="d-block w-100" alt="...">
