--- a/frontend/src/app/componentes/informacion/informacion.component.html
+++ b/frontend/src/app/componentes/informacion/informacion.component.html
@@ -1,6 +1,6 @@
 <!-- <app-encabezado></app-encabezado> -->
 
-<img width="100%" src="assets/img/portada1.jpg" alt="">
+<img width="100%" src="assets/img/portada1.jpg" alt="" class="animated fadeIn">
 
 <body>
     <div class="contenedor1">
