--- a/frontend/src/app/componentes/registro/registro.component.html
+++ b/frontend/src/app/componentes/registro/registro.component.html
@@ -2,67 +2,53 @@
     <app-encabezado class="fade-in"></app-encabezado>
 </div>
 <div class="doc">
-       <div class="col-10 col-sm-7 col-md-6 col-lg-4 col-xl-4 mr-auto ml-auto formulario" style="min-width: 280px; border: none;">
+    <div class="col-10 col-sm-7 col-md-6 col-lg-4 col-xl-4 mr-auto ml-auto formulario " style="min-width: 280px; border: none;">
         <form style="max-height: 800px;" class="needs-validation pl-5 pr-5  rounded text-center" [formGroup]="formularioRegistro" validate>
-                <div class=" my-0 icono-formulario">
-                    <i class="far fa-user-circle"></i>
-                </div>
-                <h4 class="text-center mt-1">CREAR CUENTA</h4>
-            <div style="max-width: 400px;" class="ml-auto mr-auto" >
+            <div class=" my-0 icono-formulario">
+                <i class="far fa-user-circle"></i>
+            </div>
+            <h4 class="text-center mt-1">CREAR CUENTA</h4>
+            <div style="max-width: 400px;" class="ml-auto mr-auto">
                 <div class="form-row mt-3">
                     <div class="w-100 mb-3">
-                    <input 
-                    formControlName="nombre"
-                    [class.is-invalid]="validation('nombre')"
-                    type="text" class="form-control form-control-sm p-2" id="validationCustom01" placeholder="Nombre completo"  required>
-                    <div class="invalid-feedback"> 
-                        No válido
-                    </div>
-                    </div>
-                </div>
-                <div class="form-row col">
-                    <div class="w-100 mb-3">
-                        <input 
-                            formControlName="correo"
-                            [class.is-invalid]="validation('correo')"
-                            type="mail" class="form-control form-control-sm p-2" id="validationCustom02" placeholder="Correo electrónico" required>
-                        <div class="invalid-feedback"> 
-                             No válido
+                        <input formControlName="nombre" [class.is-invalid]="validation('nombre')" type="text" class="form-control form-control-sm p-2" id="validationCustom01" placeholder="Nombre completo" required>
+                        <div class="invalid-feedback">
+                            No válido
                         </div>
                     </div>
                 </div>
                 <div class="form-row col">
                     <div class="w-100 mb-3">
-                        <input 
-                            formControlName="contrasena"
-                            [class.is-invalid]="validation('contrasena')"
-                            type="password" class="form-control form-control-sm p-2" id="validationCustom03" aria-describedby="passwordHelpInline" placeholder="Contraseña" required>
-                            <div class="invalid-tooltip">
-                                <small> Debe tener al menos:</small> <br>
-                                <small><i class="fa fa-circle" aria-hidden="true"></i> Una mayúscula</small><br>
-                                <small><i class="fa fa-circle" aria-hidden="true"></i> Una minúscula</small><br>
-                                <small><i class="fa fa-circle" aria-hidden="true"></i> Un numero 0-9</small><br>
-                                <small><i class="fa fa-circle" aria-hidden="true"></i> Un caracter especial</small>
-                            </div>
+                        <input formControlName="correo" [class.is-invalid]="validation('correo')" type="mail" class="form-control form-control-sm p-2" id="validationCustom02" placeholder="Correo electrónico" required>
+                        <div class="invalid-feedback">
+                            No válido
+                        </div>
+                    </div>
+                </div>
+                <div class="form-row col">
+                    <div class="w-100 mb-3">
+                        <input formControlName="contrasena" [class.is-invalid]="validation('contrasena')" type="password" class="form-control form-control-sm p-2" id="validationCustom03" aria-describedby="passwordHelpInline" placeholder="Contraseña" required>
+                        <div class="invalid-tooltip">
+                            <small> Debe tener al menos:</small> <br>
+                            <small><i class="fa fa-circle" aria-hidden="true"></i> Una mayúscula</small><br>
+                            <small><i class="fa fa-circle" aria-hidden="true"></i> Una minúscula</small><br>
+                            <small><i class="fa fa-circle" aria-hidden="true"></i> Un numero 0-9</small><br>
+                            <small><i class="fa fa-circle" aria-hidden="true"></i> Un caracter especial</small>
+                        </div>
                     </div>
                 </div>
                 <div class="form-row ">
                     <div class="w-100 mb-3">
-                        <input 
-                                formControlName="verificarContrasena"
-                                [class.is-invalid]="!contrasenaVerificada && this.formularioRegistro.get('verificarContrasena').touched"
-                                (keyup)="compararContrasena()"
-                                type="password" class="form-control form-control-sm p-2" id="validationCustom04" placeholder="Confirmar contraseña" required>
-                        <div class="invalid-feedback"> 
+                        <input formControlName="verificarContrasena" [class.is-invalid]="!contrasenaVerificada && this.formularioRegistro.get('verificarContrasena').touched" (keyup)="compararContrasena()" type="password" class="form-control form-control-sm p-2" id="validationCustom04"
+                            placeholder="Confirmar contraseña" required>
+                        <div class="invalid-feedback">
                             No válido
                         </div>
                     </div>
                 </div>
                 <div class="mt-2 mb-4 text-center">
                     <div>
-                        <button 
-                        [disabled]="formularioRegistro.invalid  || !contrasenaVerificada"
-                        class="btn btn-primary  w-50" type="button" (click)="registrarse()">Registrarse</button>
+                        <button [disabled]="formularioRegistro.invalid  || !contrasenaVerificada" class="btn btn-primary  w-50" type="button" (click)="registrarse()">Registrarse</button>
                     </div>
                     <div class="mt-4">
                         <a class="mt-2"><small>¿Ya tienes una cuenta?</small></a>
@@ -72,9 +58,7 @@
                     </div>
                 </div>
             </div>
-                
-        </form>  
-</div>
-</div>
 
-    
+        </form>
+    </div>
+</div>
