--- a/frontend/src/app/componentes/compartidos/carrusel-promo/carrusel-promo.component.html
+++ b/frontend/src/app/componentes/compartidos/carrusel-promo/carrusel-promo.component.html
@@ -1,4 +1,4 @@
-<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+<div id="carouselExampleControls" class="carousel slide animated fadeIn" data-ride="carousel">
     <div class="carousel-inner">
         <div class="carousel-item active">
             <img src="assets/img/anuncio1.jpg" class="d-block w-100" alt="...">
