--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,20 +1,55 @@
 /* You can add global styles to this file, and also import other style files */
-.encabezado{
+
+.encabezado {
     position: relative;
-  }
-  
-  .fade-in{
-      opacity: 0;
-      transition: position 0.5s, opacity 0.5s ease-in-out;
-      position: absolute;
-      z-index: 1;
-  }
-  
-  .encabezado:hover .fade-in {
-      opacity: 1;
-      /* position: relative; */
-  }
-  
-  app-encabezado{
-      width: 100%;
-  }
+}
+
+.fade-in {
+    opacity: 0;
+    transition: position 0.5s, opacity 0.5s ease-in-out;
+    position: absolute;
+    z-index: 1;
+}
+
+.encabezado:hover .fade-in {
+    opacity: 1;
+    /* position: relative; */
+}
+
+app-encabezado {
+    width: 100%;
+}
+
+.animated {
+    -webkit-animation-duration: 2s;
+    animation-duration: 2s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+}
+
+.animated2 {
+    -webkit-animation-duration: 1s;
+    animation-duration: 1s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+}
+
+.fast {
+    -webkit-animation-duration: 0.4s;
+    animation-duration: 0.4s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+.fadeIn {
+    animation-name: fadeIn;
+}
