--- a/frontend/src/app/componentes/informacion/informacion.component.html
+++ b/frontend/src/app/componentes/informacion/informacion.component.html
@@ -6,7 +6,7 @@
     <div class="contenedor1">
         <main class="contenido">
             <h1 id="cactus">Misión</h1>
-            <p>
+            <p style="text-align: justify;">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque sagittis rutrum gravida. Aliquam vel nunc sit amet nibh aliquam sollicitudin eu vitae elit. Duis varius turpis est, at feugiat metus blandit non. Mauris est nunc, ullamcorper nec egestas
             </p>
         </main>
@@ -25,13 +25,11 @@
 
         <div class=" container lista">
             <ul class="list-group">
-                <li class="list-group-item">Valor 1</li>
-                <li class="list-group-item ">Valor 2</li>
-                <li class="list-group-item ">Valor 3</li>
-                <li class="list-group-item ">Valor 4</li>
-                <li class="list-group-item ">Valor 5</li>
-                <li class="list-group-item ">Valor 6</li>
-
+                <li class="list-group-item ">Excelencia</li>
+                <li class="list-group-item ">Diferencia</li>
+                <li class="list-group-item ">Puntualidad</li>
+                <li class="list-group-item ">Transparencia</li>
+                <li class="list-group-item">Responsabilidad</li>
             </ul>
         </div>
 
@@ -41,8 +39,8 @@
     <div class="contenedor1">
         <main class="contenido">
             <h1 id="cactus">Visión</h1>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque sagittis rutrum gravida. Aliquam vel nunc sit amet nibh aliquam sollicitudin eu vitae elit. Duis varius turpis est, at feugiat metus blandit non. Mauris est nunc, ullamcorper nec egestas
+            <p style="text-align: justify;">
+                Ser una compañía líder a nivel nacional en producción y comercialización de arreglos ornamentales de plantas, comprometida a brindar un buen servicio y reconocida por la calidad de productos y mejores precios. Orientada siempre a la satisfacción de los clientes y a ofrecer alternativas amigables con el ambiente.
             </p>
         </main>
         <aside class="sidebar">
@@ -57,9 +55,9 @@
             <p>Km X</p>
         </main>
         <aside class="sidebar">
-            <!-- <agm-map [latitude]="latitud" [zoom]="zoom" [longitude]="longitud" class="ml-auto" (mapClick)="ubicacionSeleccionada($event)">
+            <agm-map [latitude]="latitud" [zoom]="zoom" [longitude]="longitud" class="ml-auto" (mapClick)="ubicacionSeleccionada($event)">
                 <agm-marker  [latitude]="latitud" [longitude]="longitud"></agm-marker>
-            </agm-map> -->
+            </agm-map>
         </aside>
     </div>
 </body>
