--- a/frontend/src/app/componentes/compartidos/piepagina/piepagina.component.html
+++ b/frontend/src/app/componentes/compartidos/piepagina/piepagina.component.html
@@ -9,7 +9,7 @@
 
             <div class="col-md-4 py-5 iconos">
                 <div class="mb-2 flex-center ">
-                    <p>Contactanos</p>
+                    <p>Contáctanos</p>
                     <!-- Facebook -->
                     <a class="fb-ic">
 
