--- a/frontend/src/app/componentes/administrador/agregar-promocion/agregar-promocion.component.html
+++ b/frontend/src/app/componentes/administrador/agregar-promocion/agregar-promocion.component.html
@@ -1,5 +1,5 @@
-  <!-- Modal -->
-  <div class="modal fade" [class.show]="showModalAgregarPromocion" id="addDiscountModal" tabindex="-1" aria-labelledby="addDiscountModal" aria-hidden="true">
+  <!-- Modal  -->
+  <div class="modal fade" [class.show]="OpenModal"   id="addDiscountModal" tabindex="-1" aria-labelledby="addDiscountModal" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
       <div class="modal-content">
         <div class="modal-header">
@@ -19,15 +19,15 @@
               <div class="row">
                 <div class="form-row">
                   <div class="col-md-6 mb-3">
-                    <label for="validationServer01">Fecha de inicio</label>
-                    <input type="date" formControlName="fechainicio" [class.is-invalid]="validation('fechainicio')" class="form-control form-control-sm" id="validationServer01" required>
+                    <label for="validationServer15">Fecha de inicio</label>
+                    <input type="date" formControlName="fechainicio" [class.is-invalid]="validation('fechainicio')" class="form-control form-control-sm" id="validationServer15" required>
                     <div class="invalid-feedback">
                       Campo obligatorio
                     </div>
                   </div>
                     <div class="col-md-6 mb-3">
-                      <label for="validationServer02">Fecha de finalización</label>
-                      <input type="date" formControlName="fechafin" [class.is-invalid]="validation('fechafin')" class="form-control form-control-sm" id="validationServer02" required>
+                      <label for="validationServer16">Fecha de finalización</label>
+                      <input type="date" formControlName="fechafin" [class.is-invalid]="validation('fechafin')" class="form-control form-control-sm" id="validationServer16" required>
                       <div class="invalid-feedback">
                         Campo obligatorio
                       </div>
